--- a/index.html
+++ b/index.html
@@ -12,32 +12,16 @@
 </head>
 <body>
 
-  <div class="contenedor">
-      <div class="caja1">
-        <h1 class="titulo">Esto es el titulo de la pagina.</h1>
-      </div>
+<div class="horizontal">Cabecera Principal</div>
+<div class="inline col1">Primer cuadro</div>
+<div class="inline col2">segundo cuadro</div>
+<div class="inline col3">tercer cuadro</div>
+<div class="inline col4">cuatro cuadro</div>
+<div class="inline col5">quinto cuadro</div>
+<div class="inline col6">sexto cuadro</div>
+<div class="inline col7">septimo cuadro</div>
+<div class="inline col8">octavo cuadro</div>
+<div class="horizontalFnal">Cabecera Final</div>
 
-      <div class="caja2">
-        <p>Esto es la caja dos.</p>
-      </div>
-
-      <div class="caja3">
-        <p>Esto es la caja tres.</p>
-      </div>
-
-      <div class="caja4">
-        <p>Esto es la caja cuatro.</p>
-      </div>
-    <div class="caja5">
-      <p>Esto es la caja cinco.</p>
-    </div>
-    <div class="caja6">
-      <p>Esto es la caja seix.</p>
-    </div>
-    <div class="caja7">
-      <p>Esto es la caja siete.</p>
-    </div>
-
-  </div>
 </body>
 </html>
